# rust-line

./: .gitignore  Cargo.toml  README.md  perf.sh
bench_results/: 07302025-heavy.html  07302025.html
benches/: bench.rs
files/: index.html
src/: lib.rs  main.rs
src/cli/: parse.rs
src/error/: err.rs  mod.rs
src/http/: method.rs  mod.rs  parser.rs  response.rs  status_codes.rs
src/server/: mod.rs  runtime.rs  serve.rs
src/tests/: load_test.rs  mod.rs
tests/: load_test.rs
