[package]
name = "rustline"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async", "async_tokio"] }

[[bench]]
name = "bench"
harness = false
